PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-60-erreur_arithm/gcc-compile.txt
input.c:6:16: error: expression is not assignable
    res = (10*a=b)/(3*c*20+5);
           ~~~~^
1 error generated.

return code: 1
